# johnwesthoff-blogwork

./: README.md  build_3d_model.py  test.stl  test_model.json  test_model.stl
StuffToPdf/: .gitignore  main.py  pipeline.sh
cc/: app.py  controllers.txt  elo.py  log.txt  requirements.txt  words
codegames/: README.md  board.py  deck.py  test.py  tile.py  word.py
connect4/: Cargo.toml  Readme.md  index.html
connect4/src/: human.rs  lib.rs  main.rs
crisp/: README.md  parser.js
draw/: README.md  index.php
file-cleaner/: Cargo.toml  README.md
foo-parser/: Cargo.toml
forbrzy/: .gitignore  go.py  send.sh
jbclone/: README.md
jbgames/: README.md  app.py
jeopardy_fire_score/: bml.js
magic-game/: README.md  index.html
modelm-keyboard/: main.py  mapping.py
mond/: README.md  index.html
notes/: README.md  setup.py
phonepen/: index.html  server.html
pi0/: dos.sh
pydumb/: README.md  fileio.py  foreach.py  main.py  parser.py  setto.py  test.py  token.py
pygame_platformer/: game.py  player.py  sprite.py  wall.py
septa-widget/: settings.gradle
sketch/: README.md  app.py
sketch-bitaib/: .gitignore  Cargo.toml
sketch-daily/: .gitignore  Cargo.toml  README.md  run.sh
sketch-daily/frontend/: index.html  test.html
sketch-daily/frontend/js/: billiards.js  drawing.js  results.js
sketch-daily/frontend/results/: index.html
sketch-daily/frontend/style/: style.css
sketch-daily/python/: app.py
sketch-daily/resources/: .gitignore  2025-full.json  2025.json  cert.pem  gen_offsets.py  generate_embeddings.py  key.pem  results.hbs  score.py  words.txt
sketch-daily/src/: args.rs  events.rs  game.rs  main.rs  packets.rs
sketchrs/: Cargo.toml  README.md
sketchrs/frontend/: client.js  game.html  index.html
sketchrs/frontend-rewrite/: package-lock.json
sketchrs/frontend-rewrite/src/: chat.js  drawing.js  index.js  pages.js  userlist.js  ws.js
sketchrs/frontend-rewrite/style/: style.css
sketchrs/frontend/js/: billiards.js  drawing.js  userlist.js  ws.js
sketchrs/frontend/src/: drawing.js  index.js  pages.js  userlist.js
sketchrs/frontend/style/: style.css
sketchrs/src/: args.rs  environment.rs  error.rs  game.rs  games.rs  guesses.rs  main.rs  packets.rs  player.rs  players.rs  server.rs
sketchrs/static/js/: drawing.js
the_decider/: Cargo.toml  README.md
the_decider/src/: main.rs
(+85 files in other folders)
