[package]
name = "bitaib-daily"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
priority-queue = "1.2.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = { version = "0.3", features = ["tls"] }
rand = "0.8"
futures = { version = "0.3", default-features=false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3.10", features = ["derive"] }
strsim = "0.10.0"
fastembed = "4"
base64 = "0.22.1"
rusqlite = { version = "0.32.0", features = ["bundled"] }
sqids = "0.4.2"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
