[package]
name = "sketchrs"
version = "0.1.0"
authors = ["John Westhoff <johnjwesthoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
rusqlite = "0.24.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
actix-files = "0.5.0"