[package]
name = "the_decider"
version = "0.1.0"
authors = ["John Westhoff <johnjwesthoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
rand = "0.8.3"